// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Lists List Controls: Components/Lists List Controls 1`] = `
.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c6 {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
  font-size: 24px;
}

.c7.c7 .c4,
.c7.c7 .c4 svg {
  font-size: 20px;
}

.c7.c7:hover .c4 {
  color: rgba(158,158,158,0.88);
}

.c7.c7:active .c4 {
  color: #9e9e9e;
}

.c7.c7.c7.c7.disabled .c4 {
  color: rgba(0,0,0,0.12);
}

.c8.c8 .c4,
.c8.c8 .c4 svg {
  font-size: 20px;
}

.c8.c8:hover .c4 {
  color: rgba(6,132,189,0.88);
}

.c8.c8:active .c4 {
  color: #0684bd;
}

.c8.c8.c8.c8.disabled .c4 {
  color: rgba(0,0,0,0.12);
}

.c9.c9 .c4,
.c9.c9 .c4 svg {
  font-size: 20px;
}

.c9.c9:hover .c4 {
  color: rgba(158,158,158,0.88);
}

.c9.c9:active .c4 {
  color: #9e9e9e;
}

.c9.c9.c9.c9.disabled .c4 {
  color: rgba(0,0,0,0.12);
}

.c10.c10 .c4,
.c10.c10 .c4 svg {
  font-size: 20px;
}

.c10.c10:hover .c4 {
  color: rgba(6,132,189,0.88);
}

.c10.c10:active .c4 {
  color: #0684bd;
}

.c10.c10.c10.c10.disabled .c4 {
  color: rgba(0,0,0,0.12);
}

.c11.c11 .c4,
.c11.c11 .c4 svg {
  font-size: 20px;
}

.c11.c11:hover .c4 {
  color: rgba(6,132,189,0.88);
}

.c11.c11:active .c4 {
  color: #0684bd;
}

.c11.c11.c11.c11.disabled .c4 {
  color: rgba(0,0,0,0.12);
}

.c12.c12 .c4,
.c12.c12 .c4 svg {
  font-size: 20px;
}

.c12.c12:hover .c4 {
  color: rgba(237,182,60,0.88);
}

.c12.c12:active .c4 {
  color: #edb63c;
}

.c12.c12.c12.c12.disabled .c4 {
  color: rgba(0,0,0,0.12);
}

.c3.c3 {
  padding: 0;
  width: 32px;
  height: 32px;
  color: #9e9e9e;
  opacity: 1;
  padding: 0;
  background-color: inherit;
}

.c3.c3 .c4,
.c3.c3 .c4 svg {
  font-size: 16px;
}

.c3.c3:hover {
  background-color: rgba(158,158,158,0.12);
}

.c3.c3:hover .c4 {
  color: rgba(158,158,158,0.88);
}

.c3.c3:active .c4 {
  color: #9e9e9e;
}

.c3.c3.c3.c3.disabled .c4 {
  color: rgba(0,0,0,0.12);
}

.c3.c3 .rippleVisible {
  color: #9e9e9e;
  opacity: 0.24;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-animation-name: cBKRfH;
  animation-name: cBKRfH;
}

.c0.c0 {
  padding: 8px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 8px;
}

.c2.c2 {
  margin: 0px 8px;
}

.c2.c2 a,
.c2.c2 button {
  margin-right: 0;
}

.c1 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c1.c1 {
  padding: 0;
}

.c1.c1 .list-item-primary {
  color: #212121;
  font-size: 0.875rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 20px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  word-break: break-word;
}

.c1.c1 .list-item-secondary {
  color: #757575;
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  word-break: break-word;
}

.c1.c1.multiline {
  margin: 0;
}

<div>
  <ul
    className="MuiList-root MuiList-padding"
  >
    <div
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root c0 MuiListItem-gutters MuiListItem-button"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemText-root c1"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary list-item-primary MuiTypography-body1"
        >
          Line item 1
        </span>
      </div>
      <div
        className="c2"
      >
        <button
          aria-describedby={null}
          aria-label="Comments"
          className="MuiButtonBase-root MuiIconButton-root c3"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title={null}
          type="button"
          variant="round"
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="c4  icon c5"
              size="small"
            >
              <svg
                className="c6"
                role="img"
              >
                <use
                  href="#undefined"
                  xlinkHref="#undefined"
                />
              </svg>
            </span>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
      <span
        className="MuiTouchRipple-root"
      />
    </div>
    <div
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root c0 MuiListItem-gutters MuiListItem-button"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemText-root c1"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary list-item-primary MuiTypography-body1"
        >
          Line item 2
        </span>
      </div>
      <div
        className="c2"
      >
        <button
          aria-describedby={null}
          aria-label="Comments"
          className="MuiButtonBase-root MuiIconButton-root c3"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title={null}
          type="button"
          variant="round"
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="c4  icon c5"
              size="small"
            >
              <svg
                className="c6"
                role="img"
              >
                <use
                  href="#undefined"
                  xlinkHref="#undefined"
                />
              </svg>
            </span>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
      <span
        className="MuiTouchRipple-root"
      />
    </div>
    <div
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root c0 MuiListItem-gutters MuiListItem-button"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemText-root c1"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary list-item-primary MuiTypography-body1"
        >
          Line item 3
        </span>
      </div>
      <div
        className="c2"
      >
        <button
          aria-describedby={null}
          aria-label="Comments"
          className="MuiButtonBase-root MuiIconButton-root c3"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title={null}
          type="button"
          variant="round"
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="c4  icon c5"
              size="small"
            >
              <svg
                className="c6"
                role="img"
              >
                <use
                  href="#undefined"
                  xlinkHref="#undefined"
                />
              </svg>
            </span>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
      <span
        className="MuiTouchRipple-root"
      />
    </div>
    <div
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root c0 MuiListItem-gutters MuiListItem-button"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemText-root c1"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary list-item-primary MuiTypography-body1"
        >
          Line item 4
        </span>
      </div>
      <div
        className="c2"
      >
        <button
          aria-describedby={null}
          aria-label="Comments"
          className="MuiButtonBase-root MuiIconButton-root c3"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title={null}
          type="button"
          variant="round"
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="c4  icon c5"
              size="small"
            >
              <svg
                className="c6"
                role="img"
              >
                <use
                  href="#undefined"
                  xlinkHref="#undefined"
                />
              </svg>
            </span>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
      <span
        className="MuiTouchRipple-root"
      />
    </div>
  </ul>
</div>
`;

exports[`Storyshots Components/Lists Simple List: Components/Lists Simple List 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c3 {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
  font-size: 24px;
}

.c5.c5 {
  background-color: #e0e0e0;
}

.c0.c0 {
  padding: 8px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 8px;
}

.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 36px;
  height: 36px;
  margin-right: 8px;
  background-color: #f5f6fb;
  border-radius: 4px;
  overflow: hidden;
  min-width: unset;
}

.c4 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c4.c4 {
  padding: 0;
}

.c4.c4 .list-item-primary {
  color: #212121;
  font-size: 0.875rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 20px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  word-break: break-word;
}

.c4.c4 .list-item-secondary {
  color: #757575;
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  word-break: break-word;
}

.c4.c4.multiline {
  margin: 0;
}

<div>
  <ul
    className="MuiList-root MuiList-padding"
  >
    <div
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root c0 MuiListItem-gutters MuiListItem-button"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root c1"
      >
        <span
          className="  icon c2"
        >
          <svg
            className="c3"
            role="img"
          >
            <use
              href="#undefined"
              xlinkHref="#undefined"
            />
          </svg>
        </span>
      </div>
      <div
        className="MuiListItemText-root c4"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary list-item-primary MuiTypography-body1"
        >
          Inbox
        </span>
      </div>
    </div>
    <div
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root c0 MuiListItem-gutters MuiListItem-button"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root c1"
      >
        <span
          className="  icon c2"
        >
          <svg
            className="c3"
            role="img"
          >
            <use
              href="#undefined"
              xlinkHref="#undefined"
            />
          </svg>
        </span>
      </div>
      <div
        className="MuiListItemText-root c4"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary list-item-primary MuiTypography-body1"
        >
          Drafts
        </span>
      </div>
    </div>
  </ul>
  <hr
    className="MuiDivider-root c5"
  />
  <ul
    className="MuiList-root MuiList-padding"
  >
    <div
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root c0 MuiListItem-gutters MuiListItem-button"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemText-root c4"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary list-item-primary MuiTypography-body1"
        >
          Trash
        </span>
      </div>
    </div>
    <div
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root c0 MuiListItem-gutters MuiListItem-button"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemText-root c4"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary list-item-primary MuiTypography-body1"
        >
          Spam
        </span>
      </div>
    </div>
  </ul>
</div>
`;
